debathena-pam-config (1.16) unstable; urgency=low

  * Configure the Kerberos authentication to print an error message if
    pam_krb5 can't reach the KDC. (Trac: #208)

 -- Evan Broder <broder@mit.edu>  Fri, 04 Sep 2009 14:45:26 -0400

debathena-pam-config (1.15) unstable; urgency=low

  * Don't accept root's Kerberos password, only the local root password.

 -- Evan Broder <broder@mit.edu>  Fri, 29 May 2009 17:54:17 -0400

debathena-pam-config (1.14) unstable; urgency=low

  * Avoid a harmless OMINOUS WARNING on upgrades.
  * Fix FTBFS on squeeze due to a missing newline in the generated
    debathena-pam-config.substvars.

 -- Anders Kaseorg <andersk@mit.edu>  Thu, 02 Apr 2009 13:47:39 -0400

debathena-pam-config (1.13) unstable; urgency=low

  * Fix a missing "var=" in the pam_mktemp configuration for
    intrepid/jaunty.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 14 Mar 2009 13:15:49 -0400

debathena-pam-config (1.12) unstable; urgency=low

  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
  * Change "Debian-Athena Project" to "Debathena Project".
  * Remove debian/control from version control.
  * Clean up debian/copyright.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 16:24:05 -0500

debathena-pam-config (1.11) unstable; urgency=low

  * work around a pam-auth-update bug: force it to re-read the Default:
    lines in our pam-configs

 -- Greg Price <price@mit.edu>  Mon,  3 Nov 2008 23:57:08 -0500

debathena-pam-config (1.10) unstable; urgency=low

  * force pam-auth-update on stock Hardy /etc/pam.d/common-*
    as well as stock Debathena Hardy
  * trivial clarification in dependency versions

 -- Greg Price <price@mit.edu>  Sun,  2 Nov 2008 00:17:36 -0400

debathena-pam-config (1.9) unstable; urgency=low

  * change pam-auth-update message to be clearer in menu

 -- Greg Price <price@mit.edu>  Sat,  1 Nov 2008 07:57:48 -0400

debathena-pam-config (1.8) unstable; urgency=low

  * fix dependencies in new-style case, to account for ~ suffixes
