@@ -10,6 +10,7 @@ Architecture: all
 Depends: debathena-kerberos-config, debathena-dotfiles, debathena-nsswitch-config (>= 1.3~), libpam-mktemp, ${misc:Depends}, ${debathena-pam-config-depends}
 Provides: ${diverted-files}
 Conflicts: ${diverted-files}
+Replaces: libpam-krb5-config (<= 0.0.7)
 Description: PAM configuration for Debathena
  This package configures PAM to use the Athena Kerberos realm to
  manage authentication, get AFS tokens on login, etc.
